changed background of all pages, added home button to menu, fixed a few links and changed our official email, tried fixing fly high alignment to center, tried adding images next to "about" on homepage, commented everything with jane doe out for now, edited a team member's title

--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -6,7 +6,7 @@ body, html{
 
 body{
     font-family: 'Montserrat', sans-serif;
-    background-color: #FFF;
+    background-color: #3b7cd1;
     background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
 }
 
